[package]
name = "pokemon-arena-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.0", features = ["full"]}

# Email Client
lettre = { version = "0.11.17", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-native-tls"] }
lettre_email = "0.9.4"
env_logger = "0.11.8"
native-tls = "0.2.14"
